More holding alignment fixes

--- a/frontend/src/components/Holding.css
+++ b/frontend/src/components/Holding.css
@@ -1,6 +1,6 @@
 .holding-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr .8fr 1.2fr .5fr;
+    grid-template-columns: .9fr .9fr .8fr .9fr .9fr 1fr .25fr;
     align-items: center;
     height: 5vh;
     text-decoration: none;
@@ -14,6 +14,7 @@
     color: #6A727A;
     font-weight: 600;
     justify-content: center;
+    padding-left: 5%;
 }
 #holding-delete:hover {
     color: #23BFA3;
