--- a/frontend/src/components/Holdings.css
+++ b/frontend/src/components/Holdings.css
@@ -27,7 +27,7 @@
 
 .holding-title-container {
     display: grid;
-    grid-template-columns: 1.2fr 1fr 1fr 1fr .8fr 1.2fr .5fr;
+    grid-template-columns: 1.2fr 1fr 1fr 1.4fr 1fr 1.2fr .5fr;
     align-items: center;
     color: #1A77A3;
     font-weight: 600;
@@ -39,7 +39,7 @@
     width: 20%;
     justify-self: center;
     width: 100%;
-    padding-left: 30%;
+    padding-left: 50%;
 }
 
 .holding-navlink.active-holding > * {
